--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
+        "realrashid/sweet-alert": "^7.0",
+        "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables": "9.0"
     },
     "require-dev": {
